--- a/src/sample/Login.fxml
+++ b/src/sample/Login.fxml
@@ -1,18 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ChoiceBox?>
-<?import javafx.scene.control.Hyperlink?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="700.0" style="-fx-background-color: #0d2054;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.LoginController">
+<AnchorPane prefHeight="400.0" prefWidth="700.0" style="-fx-background-color: #0d2054;" xmlns="http://javafx.com/javafx/8.0.271" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.LoginController">
    <children>
       <AnchorPane layoutX="362.0" layoutY="31.0" prefHeight="338.0" prefWidth="306.0" style="-fx-background-color: #6baddf;">
          <children>
@@ -43,6 +36,6 @@
          </font>
       </Label>
       <Label layoutX="89.0" layoutY="293.0" text="Easy to use library solutions" textFill="#6baddf" />
-      <Button fx:id="signUpButton" layoutX="112.0" layoutY="320.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="138.0" style="-fx-background-color: #c65156;" text="Sign Up" textAlignment="JUSTIFY" textFill="WHITE" />
+      <Button fx:id="signUpButton" layoutX="112.0" layoutY="320.0" mnemonicParsing="false" onAction="#signUpButtonOnAction" prefHeight="25.0" prefWidth="138.0" style="-fx-background-color: #c65156;" text="Sign Up" textAlignment="JUSTIFY" textFill="WHITE" />
    </children>
 </AnchorPane>
